testsuite/tests/typing-abstract-kinds-missing-cmi/test_sub1.missing.reference
File "c_inter.ml", line 2, characters 6-15:
2 | type ('a : B.k3) s = 'a t
          ^^^^^^^^^
Warning 219 [imprecise-kind-annotation]: The type variable `'a'
was annotated with kind `value'
but was inferred to have kind `value mod portable'.
File "c_sub1.ml", line 13, characters 0-32:
13 | type s2 : value mod portable = t
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The kind of type t is A1.k1 mod portable
         because of the definition of t at file "c_sub1.ml", line 1, characters 0-13.
       But the kind of type t must be a subkind of value mod portable
         because of the definition of s2 at file "c_sub1.ml", line 13, characters 0-32.
       No .cmi file found containing A1.k1.
       Hint: Adding "a1" to your dependencies might help.
